tests/error/array_assign_exp.gw
#! [contains] do not provide array
[1,2,3,4] => var int loop[1];
